--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   freezed_annotation: ^2.1.0
   badges: ^2.0.3
   modal_bottom_sheet: ^2.1.2
+  google_fonts: ^3.0.1
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -76,8 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
